登陆.html changed

--- a/登录.html
+++ b/登录.html
@@ -18,9 +18,8 @@
 <body class="hold-transition login-page">
 
 <div class="login-box">
-
     <div class="pull-left image">
-                    <img src="./登录_files/GW.png" class="img-circle" alt="User Image">
+                    <img src="./登录_files/GW.png" class="img-circle" alt="User Image" style="max-width:1250px; max-height: 110px;position:absolute; left:660px; top:3px; ">
                 </div>
     <div class="login-logo">
         <a href="https://www.adminiot.com.cn/index2.html"><b>Wit</b>Green</a>
