--- a/监控中心.html
+++ b/监控中心.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0049)https://www.adminiot.com.cn/admin/stat/index.html -->
+<!-- saved from url=(0071)file:///F:/GitHub/WitGreenWeb/%E7%9B%91%E6%8E%A7%E4%B8%AD%E5%BF%83.html -->
 <html style="height: auto; min-height: 100%;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -64,7 +64,7 @@
                     <li class="dropdown user user-menu">
                         <a href="https://www.adminiot.com.cn/admin/stat/index.html#" class="dropdown-toggle" data-toggle="dropdown">
                             <img src="./监控中心_files/avatar.png" class="user-image" alt="User Image">
-                            <span class="hidden-xs">test3</span>
+                            <span class="hidden-xs">用户名</span>
                         </a>
                         <ul class="dropdown-menu">
                             <!-- User image -->
@@ -124,7 +124,7 @@
                 <li class="active">
                             <a href="https://www.adminiot.com.cn/admin/stat/index.html">
                             <i class="fa fa-bar-chart"></i>
-                            <span>监控中心</span>
+                            <span>监测中心</span>
                             </a>
                          </li><li>
                             <a href="https://www.adminiot.com.cn/admin/alert/index.html">
@@ -181,7 +181,7 @@
     </aside>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper" style="min-height: 611px;">
+    <div class="content-wrapper" style="min-height: 791px;">
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
@@ -204,9 +204,9 @@
 
     <div class="col-lg-3 col-xs-6">
         <!-- small box -->
-        <div class="small-box bg-aqua">
+        <div class="small-box bg-light-blue">
             <div class="inner">
-                <h3>206</h3>
+                <h3>2060</h3>
                 <p>物联网设备总数</p>
             </div>
             <div class="icon">
@@ -219,7 +219,7 @@
 
     <div class="col-lg-3 col-xs-6">
         <!-- small box -->
-        <div class="small-box bg-green">
+        <div class="small-box bg-yellow">
             <div class="inner">
                 <h3>1</h3>
                 <p>物联网在线设备总数</p>
@@ -249,7 +249,7 @@
         <!-- small box -->
         <div class="small-box  bg-red">
             <div class="inner">
-                <h3>60601</h3>
+                <h3>60</h3>
                 <p>告警事件</p>
             </div>
             <div class="icon">
@@ -277,7 +277,7 @@
         <!-- small box -->
         <div class="small-box bg-light-blue">
             <div class="inner">
-                <h3>22169</h3>
+                <h3>2220</h3>
 
                 <p>操作日志</p>
             </div>
@@ -293,27 +293,7 @@
 
 
 
-<div class="row">
-    <div class="col-md-12">
-        <!-- Map box -->
-        
-    </div>
-    <div class="col-md-12">
-        <!-- Custom tabs (Charts with tabs)-->
-        <div class="nav-tabs-custom">
-            <!-- Tabs within a box -->
-            <ul class="nav nav-tabs pull-right">
-                <li class="active"><a href="https://www.adminiot.com.cn/admin/stat/index.html#revenue-chart" data-toggle="tab">Area</a></li>
-            </ul>
-            <div class="tab-content no-padding">
-                <!-- Morris chart - Sales -->
-                <div class="chart tab-pane active" id="revenue-chart" style="position: relative; height: 300px; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><svg height="300" version="1.1" width="642" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="overflow: hidden; position: relative; top: -0.2px;"><desc style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Created with Raphaël 2.2.0</desc><defs style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></defs><text x="50.75" y="258.984375" text-anchor="end" font-family="sans-serif" font-size="12px" stroke="none" fill="#888888" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: end; font-family: sans-serif; font-size: 12px; font-weight: normal;" font-weight="normal"><tspan dy="4.3984375" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">0</tspan></text><path fill="none" stroke="#aaaaaa" d="M63.25,258.984375H617" stroke-width="0.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></path><text x="50.75" y="200.48828125" text-anchor="end" font-family="sans-serif" font-size="12px" stroke="none" fill="#888888" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: end; font-family: sans-serif; font-size: 12px; font-weight: normal;" font-weight="normal"><tspan dy="4.40234375" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">7,500</tspan></text><path fill="none" stroke="#aaaaaa" d="M63.25,200.48828125H617" stroke-width="0.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></path><text x="50.75" y="141.9921875" text-anchor="end" font-family="sans-serif" font-size="12px" stroke="none" fill="#888888" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: end; font-family: sans-serif; font-size: 12px; font-weight: normal;" font-weight="normal"><tspan dy="4.3984375" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">15,000</tspan></text><path fill="none" stroke="#aaaaaa" d="M63.25,141.9921875H617" stroke-width="0.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></path><text x="50.75" y="83.49609375" text-anchor="end" font-family="sans-serif" font-size="12px" stroke="none" fill="#888888" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: end; font-family: sans-serif; font-size: 12px; font-weight: normal;" font-weight="normal"><tspan dy="4.40234375" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">22,500</tspan></text><path fill="none" stroke="#aaaaaa" d="M63.25,83.49609375H617" stroke-width="0.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></path><text x="50.75" y="25" text-anchor="end" font-family="sans-serif" font-size="12px" stroke="none" fill="#888888" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: end; font-family: sans-serif; font-size: 12px; font-weight: normal;" font-weight="normal"><tspan dy="4.3984375" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">30,000</tspan></text><path fill="none" stroke="#aaaaaa" d="M63.25,25H617" stroke-width="0.5" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></path><text x="515.4006682867557" y="271.484375" text-anchor="middle" font-family="sans-serif" font-size="12px" stroke="none" fill="#888888" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: middle; font-family: sans-serif; font-size: 12px; font-weight: normal;" font-weight="normal" transform="matrix(1,0,0,1,0,8.0078)"><tspan dy="4.3984375" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">2017</tspan></text><text x="269.1400364520049" y="271.484375" text-anchor="middle" font-family="sans-serif" font-size="12px" stroke="none" fill="#888888" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); text-anchor: middle; font-family: sans-serif; font-size: 12px; font-weight: normal;" font-weight="normal" transform="matrix(1,0,0,1,0,8.0078)"><tspan dy="4.3984375" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">2016</tspan></text><path fill="#74a5c2" stroke="none" d="M63.25,217.39755208333332C78.72539489671932,217.90451822916665,109.67618469015797,220.9355908203125,125.15157958687729,219.42541666666668C140.6269744835966,217.91524251302084,171.57776427703527,207.5629202954235,187.05315917375458,205.31615885416667C202.3603432563791,203.0938187329235,232.9747114216282,203.34581542968752,248.28189550425273,201.54901041666668C263.5890795868773,199.75220540364583,294.2034477521264,193.46172833774477,309.51063183475094,190.94171875C324.98602673147025,188.3940167492031,355.93681652490886,181.17189615885417,371.4122114216282,181.2781640625C386.8876063183475,181.38443196614583,417.83839611178615,202.65022868283242,433.31379100850546,191.79186197916667C448.62097509113,181.05152100054076,479.2353432563791,101.2867919112569,494.54252733900364,94.88333333333333C509.6815006075334,88.55024243209023,539.959447144593,134.19735802283654,555.0984204131228,140.84566406250002C570.5738153098421,147.64171023637823,601.5246051032807,146.70697265625,617,148.6607421875L617,258.984375L63.25,258.984375Z" fill-opacity="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); fill-opacity: 1;"></path><path fill="none" stroke="#3c8dbc" d="M63.25,217.39755208333332C78.72539489671932,217.90451822916665,109.67618469015797,220.9355908203125,125.15157958687729,219.42541666666668C140.6269744835966,217.91524251302084,171.57776427703527,207.5629202954235,187.05315917375458,205.31615885416667C202.3603432563791,203.0938187329235,232.9747114216282,203.34581542968752,248.28189550425273,201.54901041666668C263.5890795868773,199.75220540364583,294.2034477521264,193.46172833774477,309.51063183475094,190.94171875C324.98602673147025,188.3940167492031,355.93681652490886,181.17189615885417,371.4122114216282,181.2781640625C386.8876063183475,181.38443196614583,417.83839611178615,202.65022868283242,433.31379100850546,191.79186197916667C448.62097509113,181.05152100054076,479.2353432563791,101.2867919112569,494.54252733900364,94.88333333333333C509.6815006075334,88.55024243209023,539.959447144593,134.19735802283654,555.0984204131228,140.84566406250002C570.5738153098421,147.64171023637823,601.5246051032807,146.70697265625,617,148.6607421875" stroke-width="3" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></path><circle cx="63.25" cy="217.39755208333332" r="4" fill="#3c8dbc" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="125.15157958687729" cy="219.42541666666668" r="4" fill="#3c8dbc" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="187.05315917375458" cy="205.31615885416667" r="4" fill="#3c8dbc" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="248.28189550425273" cy="201.54901041666668" r="4" fill="#3c8dbc" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="309.51063183475094" cy="190.94171875" r="4" fill="#3c8dbc" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="371.4122114216282" cy="181.2781640625" r="4" fill="#3c8dbc" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="433.31379100850546" cy="191.79186197916667" r="4" fill="#3c8dbc" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="494.54252733900364" cy="94.88333333333333" r="4" fill="#3c8dbc" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="555.0984204131228" cy="140.84566406250002" r="4" fill="#3c8dbc" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="617" cy="148.6607421875" r="4" fill="#3c8dbc" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><path fill="#eaf3f6" stroke="none" d="M63.25,238.19096354166666C78.72539489671932,237.97257812499998,109.67618469015797,239.50712565104166,125.15157958687729,237.317421875C140.6269744835966,235.12771809895835,171.57776427703527,221.6428128557605,187.05315917375458,220.67333333333335C202.3603432563791,219.71439163180216,232.9747114216282,231.45416341145835,248.28189550425273,229.60373697916668C263.5890795868773,227.753310546875,294.2034477521264,207.71508472435679,309.51063183475094,205.869921875C324.98602673147025,204.0044825108151,355.93681652490886,212.82120768229169,371.4122114216282,214.761328125C386.8876063183475,216.70144856770835,417.83839611178615,230.60829284779143,433.31379100850546,221.39088541666666C448.62097509113,212.27366719674976,479.2353432563791,147.17437044990214,494.54252733900364,141.42282552083333C509.6815006075334,135.7344843821938,539.959447144593,169.22794732285945,555.0984204131228,175.63134114583335C570.5738153098421,182.17703260931776,601.5246051032807,188.82221028645833,617,193.21916666666667L617,258.984375L63.25,258.984375Z" fill-opacity="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); fill-opacity: 1;"></path><path fill="none" stroke="#a0d0e0" d="M63.25,238.19096354166666C78.72539489671932,237.97257812499998,109.67618469015797,239.50712565104166,125.15157958687729,237.317421875C140.6269744835966,235.12771809895835,171.57776427703527,221.6428128557605,187.05315917375458,220.67333333333335C202.3603432563791,219.71439163180216,232.9747114216282,231.45416341145835,248.28189550425273,229.60373697916668C263.5890795868773,227.753310546875,294.2034477521264,207.71508472435679,309.51063183475094,205.869921875C324.98602673147025,204.0044825108151,355.93681652490886,212.82120768229169,371.4122114216282,214.761328125C386.8876063183475,216.70144856770835,417.83839611178615,230.60829284779143,433.31379100850546,221.39088541666666C448.62097509113,212.27366719674976,479.2353432563791,147.17437044990214,494.54252733900364,141.42282552083333C509.6815006075334,135.7344843821938,539.959447144593,169.22794732285945,555.0984204131228,175.63134114583335C570.5738153098421,182.17703260931776,601.5246051032807,188.82221028645833,617,193.21916666666667" stroke-width="3" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></path><circle cx="63.25" cy="238.19096354166666" r="4" fill="#a0d0e0" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="125.15157958687729" cy="237.317421875" r="4" fill="#a0d0e0" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="187.05315917375458" cy="220.67333333333335" r="4" fill="#a0d0e0" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="248.28189550425273" cy="229.60373697916668" r="4" fill="#a0d0e0" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="309.51063183475094" cy="205.869921875" r="4" fill="#a0d0e0" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="371.4122114216282" cy="214.761328125" r="4" fill="#a0d0e0" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="433.31379100850546" cy="221.39088541666666" r="4" fill="#a0d0e0" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="494.54252733900364" cy="141.42282552083333" r="4" fill="#a0d0e0" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="555.0984204131228" cy="175.63134114583335" r="4" fill="#a0d0e0" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle><circle cx="617" cy="193.21916666666667" r="4" fill="#a0d0e0" stroke="#ffffff" stroke-width="1" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></circle></svg><div class="morris-hover morris-default-style" style="display: none;"></div></div>
 
-            </div>
-        </div>
-        <!-- /.nav-tabs-custom -->
-    </div>
-</div>
 
 <script>
     /*admin/stat/index  map function*/
@@ -744,4 +724,4 @@
 </script>
 
 
-<script type="text/javascript" src="./监控中心_files/api"></script><script src="./监控中心_files/getscript"></script><div class="tangram-suggestion-main" id="tangram-suggestion--TANGRAM__2d-main" data-guid="TANGRAM__2d" style="position: absolute; display: none; left: 0px; top: -1px;"><div id="tangram-suggestion--TANGRAM__2d" class="tangram-suggestion" style="position:relative; top:0px; left:0px"></div></div></body></html>
+<script type="text/javascript" src="./监控中心_files/api"></script><script src="./监控中心_files/getscript"></script><script src="./监控中心_files/getscript(1)"></script><div class="tangram-suggestion-main" id="tangram-suggestion--TANGRAM__2d-main" data-guid="TANGRAM__2d" style="position: absolute; display: none; left: 0px; top: -1px;"><div id="tangram-suggestion--TANGRAM__2d" class="tangram-suggestion" style="position:relative; top:0px; left:0px"></div></div><script type="text/javascript" src="./监控中心_files/api(1)"></script><script src="./监控中心_files/getscript"></script></body></html>
